# py_project_framework

./: README.md  pyproject.toml  report.html
allure-results/: 1af5ee28-616b-4818-b9d3-26e843ef90ab-container.json  2e7400a8-505f-4c19-bde8-a7676e8ee53b-result.json  3a4dae89-5865-44aa-b01a-efbfcba763e6-attachment.txt  44f18884-e47c-4883-adfa-37a8063e279b-attachment.txt  5750582e-e17e-4555-af77-d58826ece0a8-attachment.txt  7465b653-1704-4e91-b0cc-6fde7609c844-result.json  83e7e5f7-a661-4fbd-a506-29861beeadde-container.json  88be9d26-f7aa-44b2-8992-374750e021a1-attachment.txt  89c2b61c-325a-444f-9c3c-d3daf5d58f75-container.json  8e288278-661a-49a9-a06a-8f2e819e68dd-container.json  bc3a94bc-bf60-43de-9566-eb940d68692a-container.json  bcf74285-2ec6-4168-8138-2521c31812af-container.json  c981fc7e-ab3b-4927-b16c-8ac4a4a5951f-result.json  cff4363d-83fd-47e4-88f5-514ce88c08ed-attachment.txt
src/py_project_framework/: config.py  driverfactory.py
src/py_project_framework/pageobjects/: basepage.py  bookspage.py  homepage.py  profilepage.py
src/py_project_framework/utils/: api_constants.py  api_util.py  logger_config.py  test_data_util.py
tests/: conftest.py  test_suite.py
